# ai-challenger

./: .gitignore  .travis.yml  LICENSE  Makefile  README.rst  ai-challenger.cabal  appveyor.yml  circle.yml  launch_training_tournament.py  shell.nix  stack.yaml  tourney.sh  tourney_grid.sh  tourney_rps.sh
dashboard/: .gitignore  index.dev.html  index.html  index.static.html  package.json
dashboard/css/: main.css  vintage-terminal.css
dashboard/js/: app.js
dashboard/js/actions/: AppActions.js  ConsoleActions.js  ControlPanelActions.js
dashboard/js/components/: AIChallengerApp.react.js  Console.react.js  ConsoleCurrentLine.react.js  ConsoleLogLine.react.js  ErrorPane.react.js  GridView.react.js  Header.react.js  Ladder.react.js  LadderLine.react.js  LogButton.react.js  MatchTable.react.js  MatchTableCell.react.js  MatchViewer.react.js  MatchViewerCloseButton.react.js  PlayPauseButton.react.js  ProgressBar.react.js  RPSView.react.js  TurnsCounter.react.js  ViewControlPanel.react.js
dashboard/js/constants/: ActionTypes.js  AppStoreInitialData.js
dashboard/js/stores/: AppStore.js  ConsoleStore.js  ControlPanelStore.js
dashboard/js/utils/: DrawMatch.js  EngineConnect.js  LogParser.js
demo/: Main.hs  RockPaperScissors.hs
game-grid/: Grid.hs  Main.hs  greedy.py  randy.py  rules.rst
game-rps/: Main.hs  RockPaperScissors.hs  paper.py  randy.py  rock.py  rules.rst  scissors.py
lorem-ipsum-html/: LoremIpsumHTML.hs
remote-play/: RemotePlay.hs
src/: AIChallenger.hs
src/AIChallenger/: Bot.hs  Channel.hs  Config.hs  Exception.hs  HTML.hs  Match.hs  StateVar.hs  Types.hs  WebApp.hs  WebSocketApp.hs
src/Data/Vector/: Extended.hs
src/js/: main.js  tournament.js
test/: TestMain.hs
test-grid/: TestMain.hs
test-grid/test-bots/: asdf.erl  bender.py  fry.py  idle.py  waiver.js
test-rps/: TestMain.hs
