name:                ai-challenger
version:             0.1.0.0
synopsis:            An engine for bot competitions
license:             MIT
license-file:        LICENSE
author:              DmitryIvanov
maintainer:          divanov@machinezone.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.7
    , aeson
    , containers
    , deepseq
    , deepseq-generics
    , ekg
    , mtl
    , network >= 2.6
    , network-simple >= 0.4
    , path
    , process
    , semigroups
    , servant >= 0.4.2
    , servant-server >= 0.4.2
    , text >= 1.2
    , transformers
    , vector
    , wai
    , warp
  exposed-modules:
      AIChallenger
      AIChallenger.Types
  other-modules:
      AIChallenger.Bot
      AIChallenger.Channel
      AIChallenger.Match
      AIChallenger.StateVar

executable ai-challenger-rps
  main-is:             Main.hs
  build-depends:
      base >= 4.7
    , containers
    , ai-challenger
  hs-source-dirs:      game-rps
  default-language:    Haskell2010
  ghc-options: -Wall -ferror-spans -threaded -with-rtsopts=-T

executable ai-challenger-grid
  main-is:             Main.hs
  build-depends:
      base >= 4.7
    , containers
    , ai-challenger
  hs-source-dirs:      game-grid
  default-language:    Haskell2010
  ghc-options: -Wall -ferror-spans -threaded -with-rtsopts=-T