name:                ai-challenger
version:             0.1.0.0
synopsis:            An engine for bot competitions
license:             MIT
license-file:        LICENSE
author:              DmitryIvanov
maintainer:          divanov@machinezone.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.7
    , aeson
    , containers
    , deepseq
    , deepseq-generics
    , ekg
    , mtl
    , network >= 2.6
    , network-simple >= 0.4
    , path
    , process
    , semigroups
    , servant >= 0.4.2
    , servant-server >= 0.4.2
    , text >= 1.2
    , transformers
    , vector
    , wai
    , warp
  exposed-modules:
      AIChallenger
      AIChallenger.Bot
      AIChallenger.Channel
      AIChallenger.Match
      AIChallenger.Types
  other-modules:
      AIChallenger.StateVar

executable ai-challenger-rps
  main-is:             Main.hs
  build-depends:
      base >= 4.8
    , ai-challenger
    , containers
    , vector
  hs-source-dirs:      game-rps
  default-language:    Haskell2010
  ghc-options: -Wall -ferror-spans -threaded -with-rtsopts=-T

executable ai-challenger-grid
  main-is:             Main.hs
  build-depends:
      base >= 4.8
    , ai-challenger
    , containers
    , vector
  hs-source-dirs:      game-grid
  default-language:    Haskell2010
  ghc-options: -Wall -ferror-spans -threaded -with-rtsopts=-T

Test-Suite RPSTest
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  hs-source-dirs: game-rps, test
  ghc-options: -Wall -ferror-spans
  default-language:    Haskell2010
  build-depends:
      base >= 4.8
    , ai-challenger
    , containers
    , directory
    , path
    , text
    , vector
