name:                ai-challenger
version:             0.1.0.0
synopsis:            An engine for bot competitions
license:             MIT
license-file:        LICENSE
author:              DmitryIvanov
maintainer:          divanov@machinezone.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options: -Wall -ferror-spans -fno-warn-orphans
  build-depends:
      base >= 4.7
    , blaze-html
    , bytestring
    , aeson
    , containers
    , deepseq
    , deepseq-generics
    , directory
    , either
    , ekg
    , extra
    , lucid
    , markdown
    , mtl
    , network >= 2.6
    , network-simple >= 0.4
    , optparse-applicative
    , path
    , process
    , semigroups
    , servant >= 0.4.2
    , servant-docs
    , servant-lucid
    , servant-server >= 0.4.2
    , text >= 1.2
    , transformers
    , unagi-chan
    , vector
    , wai
    , wai-cors
    , wai-extra
    , wai-middleware-metrics
    , wai-websockets
    , warp
    , websockets
  exposed-modules:
      AIChallenger
      AIChallenger.Bot
      AIChallenger.Channel
      AIChallenger.Config
      AIChallenger.Match
      AIChallenger.Types
      Data.Vector.Extended
      AIChallenger.StateVar
      AIChallenger.WebApp
  other-modules:
      AIChallenger.Exception
      AIChallenger.HTML

executable ai-challenger-rps
  main-is:             Main.hs
  other-modules:
      RockPaperScissors
  build-depends:
      base >= 4.8
    , ai-challenger
    , containers
    , path
    , text
    , vector
  hs-source-dirs:      game-rps
  default-language:    Haskell2010
  ghc-options: -Wall -ferror-spans -threaded -with-rtsopts=-T

executable ai-challenger-grid
  main-is:             Main.hs
  other-modules:
      Grid
  build-depends:
      base >= 4.8
    , ai-challenger
    , containers
    , path
    , semigroups
    , text
    , vector
  hs-source-dirs:      game-grid
  default-language:    Haskell2010
  ghc-options: -Wall -ferror-spans -threaded -with-rtsopts=-T

Test-Suite RPSTest
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  other-modules:
      RockPaperScissors
  hs-source-dirs: game-rps, test
  ghc-options: -Wall -ferror-spans
  default-language:    Haskell2010
  build-depends:
      base >= 4.8
    , ai-challenger
    , containers
    , directory
    , path
    , text
    , vector

Test-Suite GridTest
  type: exitcode-stdio-1.0
  main-is: TestMain.hs
  other-modules:
      Grid
  hs-source-dirs: game-grid, test-grid
  ghc-options: -Wall -ferror-spans -threaded -with-rtsopts=-T
  default-language:    Haskell2010
  build-depends:
      base >= 4.8
    , ai-challenger
    , aeson
    , bytestring
    , containers
    , directory
    , path
    , text
    , vector
    , semigroups
    , tasty
    , tasty-hunit
    , tasty-th
    , transformers
    , unagi-chan
    , wai
    , wai-extra